--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 
 <table width="100%">
 <tr>
-<td height="300" width="50%" align="left"><IMG border="1" src="chitra_pic.jpg" width="90%">
+<td height="300" width="50%" align="left"><IMG border="1" src="chitra_pic.jpg" width="40%">
 <br>
-Software Engineer, Nuro
+<p>Chitra Karanam, Ph.D.
+<br>
+Software Engineer, Nuro</p>
 
 </td>
 
@@ -108,7 +110,7 @@ Software Engineer, Nuro
 <hr>
 <font size="5pt">Publications</font>
 <ul>
-<li><p>H. Cai*, B. Korany*, <strong>C. R. Karanam</strong>*, and Y. Mostofi, "Teaching RF to Sense without RF Training Measurements," in proceedings of the <i>ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT)</i>, Dec. 2020. <font color="gray">(*equal contribution)</font></p></li>
+<li><p>H. Cai*, B. Korany*, <strong>C. R. Karanam</strong>*, and Y. Mostofi, "<a href="https://web.ece.ucsb.edu/~ymostofi/papers/Ubicom20_KoranyKaranamCaiMostofi.pdf" target=_blank>Teaching RF to Sense without RF Training Measurements</a>," in proceedings of the <i>ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT)</i>, Dec. 2020. [<a href="https://web.ece.ucsb.edu/~ymostofi/papers/Ubicom20_KoranyKaranamCaiMostofi.pdf" target=_blank>pdf</a>] <font color="gray">(*equal contribution)</font></p></li>
 
 <li><p>B. Korany*, <strong>C. R. Karanam</strong>*, H. Cai*, and Y. Mostofi, "<a href="https://web.ece.ucsb.edu/~ymostofi/papers/MobiCom19_KoranyKaranamCaiMostofi.pdf" target=_blank>XModal-ID: Using WiFi for Through-Wall Person Identification from Candidate Video Footage</a>," in proceedings of the <i>25th Annual International Conference on Mobile Computing and Networking (MobiCom)</i>, Oct. 2019. [<a href="https://web.ece.ucsb.edu/~ymostofi/papers/MobiCom19_KoranyKaranamCaiMostofi.pdf" target=_blank>pdf</a>] [<a href="https://www.ece.ucsb.edu/~ymostofi/IdentificationThroughWalls" target=_blank>project page</a>] [<a href="https://www.youtube.com/watch?v=FDZ39h-kCS8" target=_blank>video</a>] [<a href="https://www.youtube.com/watch?v=yy3fk5OfVeo" target=_blank>slides</a>] (acceptance rate: 19%) <font color="gray">(*equal contribution)</font></p></li>
 
