--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <table width="100%">
 <tr>
-<td height="300" width="50%" align="left"><IMG border="1" src="chitra_pic.jpg" width="40%">
+<td height="300" width="50%" align="left"><IMG border="1" src="chitra_pic.jpg" width="90%">
 <br>
 <p>Chitra Karanam, Ph.D.
 <br>
@@ -43,7 +43,7 @@ Software Engineer, Nuro</p>
     <font size="5pt">Updates</font>
     <p><strong>Jan. 2021:</strong> Joined Nuro as a Software Engineer on the Radar team.</p>
 
-    <p><strong>Dec. 2020:</strong> Defended my thesis and graduated from UCSB.</p>
+    <p><strong>Dec. 2020:</strong> Defended my thesis: <i>Robotic RF Sensing with Off-the-Shelf Devices</i>, and graduated from UCSB.</p>
 
     <p><strong>Sep. 2019: </strong> Released <a href="https://www.youtube.com/watch?v=FDZ39h-kCS8" target="_blank"> video</a> and <a HREF="https://www.ece.ucsb.edu/~ymostofi/IdentificationThroughWalls" target="_blank"> project page</a> for <i>XModal-ID: Through-Wall Person Identification from Candidate Video Footage Using WiFi</i>. </p>
 
@@ -94,7 +94,7 @@ Software Engineer, Nuro</p>
 
 
 <hr>
-<p>Hi there! I'm a Software Engineer at Nuro working on radars for autonomous vehicles. I completed my Ph.D. at University of California, Santa Barbara under the guidance of Prof. <a href="http://www.ece.ucsb.edu/~ymostofi" target="_blank">Yasamin Mostofi</a>. </p>
+<p>Hi there! I'm a Software Engineer at Nuro, working on radars for autonomous vehicles. I recently completed my Ph.D. in ECE at University of California, Santa Barbara, with a focus on RF sensing and localization.</p>
 
 
 <hr>
@@ -103,7 +103,7 @@ Software Engineer, Nuro</p>
 
 <li> <p>B.Tech and M.Tech Dual-degree in Electrical Engineering (Communication Systems) from <a href="http://www.iitm.ac.in/" target="_blank">Indian Institute of Technology Madras</a> : 2014</p>
 
-<li> <p>MS/PhD in Electrical and Computer Engineering (Communications and Signal Processing) from <a href="http://www.ece.ucsb.edu/" target="_blank">University of California Santa Barbara</a> : 2014 - 2020</p>
+<li> <p>MS/PhD in Electrical and Computer Engineering (@ <a href="https://web.ece.ucsb.edu/~ymostofi/" target="_blank">Mostofi-lab</a>) from <a href="http://www.ece.ucsb.edu/" target="_blank">University of California Santa Barbara</a> : 2014 - 2020</p>
 </ul>
 
 
@@ -123,8 +123,6 @@ Software Engineer, Nuro</p>
 <li><p>S. Depatla, <strong>C. R. Karanam</strong>, and Y. Mostofi, "<a href="https://web.ece.ucsb.edu/~ymostofi/papers/APM_DepatlaKaranamMostofi.pdf" target=_blank>Robotic Through-Wall Imaging: Radio-Frequency Imaging Possibilities with Unmanned Vehicles</a>," IEEE Antennas and Propagation Magazine, Special issue on Electromagnetic Inverse Problems for Sensing and Imaging, 59, no. 5 : 47-60, Oct. 2017. [<a href="https://web.ece.ucsb.edu/~ymostofi/papers/APM_DepatlaKaranamMostofi.pdf" target=_blank>pdf</a>]</p>
 
 <li><p><strong>C. R. Karanam</strong> and Y. Mostofi, "<a href="https://web.ece.ucsb.edu/~ymostofi/papers/IPSN17_KaranamMostofi.pdf" target=_blank>3D Through-Wall Imaging with Unmanned Aerial Vehicles Using WiFi</a>," in proceedings of the <i>16th ACM/IEEE International Conference on Information Processing in Sensor Networks (IPSN)</i>, April 2017. [<a href="https://web.ece.ucsb.edu/~ymostofi/papers/IPSN17_KaranamMostofi.pdf" target=_blank>pdf</a>] [<a href="http://www.ece.ucsb.edu/~ymostofi/3DThroughWallImaging.html" target="_blank">project page</a>] [<a href="https://www.youtube.com/watch?v=THu3ZvAHI9A" target="_blank">video</a>] (acceptance rate: 18.3%)</p>
-
-
 </ul>
 
 <hr>
