--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
 <br>
 <p>Chitra Karanam, Ph.D.
 <br>
-Software Engineer, Nuro</p>
+Radar Tech Lead, Nuro</p>
 
 </td>
 
 <td height="300" width="50%">
   <div style="height:300px;border:2px solid #9AC6E2;overflow:auto;padding:10px; background-color:#F9FDFF;">
     <font size="5pt">Updates</font>
+    <p><strong>Mar. 2023:</strong> Started at a new role - I'm now the Radar Technical Lead at Nuro.</p>
+
     <p><strong>Jan. 2021:</strong> Joined Nuro as a Software Engineer on the Radar team.</p>
 
     <p><strong>Dec. 2020:</strong> Defended my thesis: <i>Robotic RF Sensing with Off-the-Shelf Devices</i>, and graduated from UCSB.</p>
@@ -94,7 +96,7 @@ Software Engineer, Nuro</p>
 
 
 <hr>
-<p>Hi there! I'm a Software Engineer at Nuro, working on radars for autonomous vehicles. I recently completed my Ph.D. in ECE at University of California, Santa Barbara, with a focus on RF sensing and localization.</p>
+<p>Hi there! I'm the Radar Tech Lead at Nuro - working on radars for our autonomous delivery vehicles. Prior to this, I was a Radar DSP Software Enginner on the radar team at Nuro, after completing my Ph.D. in ECE at University of California, Santa Barbara, with a focus on RF sensing and localization.</p>
 
 
 <hr>
